force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/AcctPlanOtherRevenueExpenditure__c.object-meta.xml
<CustomObject>
    <label>Account Plan Other Revenue Expenditure</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Other Revenue Expenditure N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Other Revenue Expenditure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>