force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/AcctPlanWallet__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanWallet__c</fullName>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Other Revenue Expenditure</relationshipLabel>
    <relationshipName>Account_Plan_Other_Revenue_Expenditure</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>