force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currency</description>
    <inlineHelpText>Currency</inlineHelpText>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Account Plan Other Revenue Expenditure</relationshipLabel>
    <relationshipName>Account_Plan_Other_Revenue_Expenditure</relationshipName>
    <type>Lookup</type>
</CustomField>