force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/ExpectedAmountOrHistoricalAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedAmountOrHistoricalAmount__c</fullName>
    <description>Expected amount/ Historical amount (THB)</description>
    <inlineHelpText>Expected amount/ Historical amount (THB)</inlineHelpText>
    <label>Expected amount/ Historical amount (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>