force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/HedgingPolicy__c.field-meta.xml
<CustomField>
    <fullName>HedgingPolicy__c</fullName>
    <description>Hedging policy</description>
    <inlineHelpText>Hedging policy</inlineHelpText>
    <label>HedgingPolicy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No hedge</fullName>
            </value>
            <value>
                <fullName>Natural hedge</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>matching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>