force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/MismatchCurrency__c.field-meta.xml
<CustomField>
    <fullName>MismatchCurrency__c</fullName>
    <description>Mismatch currency</description>
    <inlineHelpText>Mismatch currency</inlineHelpText>
    <label>MismatchCurrency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>