force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Business Opportunity</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Business Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>