force-app/main/default/objects/AcctPlanOtherRevenueExpenditure__c/fields/RevenueOrExpenditure__c.field-meta.xml
<CustomField>
    <fullName>RevenueOrExpenditure__c</fullName>
    <description>Revenue/ Expenditure</description>
    <inlineHelpText>Revenue/ Expenditure</inlineHelpText>
    <label>RevenueOrExpenditure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dividend</fullName>
            </value>
            <value>
                <fullName>Guarantee fee</fullName>
            </value>
            <value>
                <fullName>Royaltee fee</fullName>
            </value>
            <value>
                <fullName>Parent loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>